compiler/tests/should-fail/InvalidProtocolAnnotation.via
/* InvalidProtocolAnnotationError */

host alice : {A}

fun main() {
    val a: int{B}@Local(host = alice) = 42;
}
